--- a/atkm/src/app/shared/components/home-content/home-content.component.html
+++ b/atkm/src/app/shared/components/home-content/home-content.component.html
@@ -1,45 +1,43 @@
 <div class="terminal-wrapper">
-  <!-- Section Copilot -->
   <header class="terminal-header">
-    <h1>terminal</h1>
+    <h1>atk-terminal</h1>
+    <div class="terminal-details">
+      <h2>Terminal console information and commands. Debug</h2>
+    </div>
   </header>
-  <div class="terminal-details">
-    <h2>Terminal console information and commands.</h2>
-  </div>
-  <div class="terminal-main">
+
+  <main class="terminal-main">
     <div class="terminal-section">
       <div class="terminal-content">
         <atk-icon class="terminal-toggle" name="triangle-right" color="var(--color-btn-bg-default)" />
-        <div class="infos-title">
-          <h2>Terminal</h2>
+        <!-- Step 1: Service injection check -->
+        <div class="terminal-status">
+          <!-- <span>Ln {{ line() }},</span>
+          <span>Col {{ column() }} · Idx {{ caretIndex() }}</span>
+          @if (selectionText(); as text) {
+          <span class="input-selection"> · Sel "{{ text }}"</span>
+          } -->
         </div>
-        <textarea class="terminal-input" placeholder="Informations générales" rows="1"></textarea>
+        <!-- <div class="terminal-content terminal-stack"> -->
+        <!-- <div #hl class="terminal-highlights" [innerHTML]="highlightedHtml()"></div> -->
+        <textarea #ta class="terminal-input terminal-overlay" placeholder="" [style.--input-min-height]="inputHeight"
+          spellcheck="false" autocorrect="off" autocomplete="off" autocapitalize="off"></textarea>
+        <!-- </div> -->
+
       </div>
 
       <div class="terminal-cmd">
-        <button class="cmd-btn" (click)="handleSuggestion('profile')">
-          <div class="cmd-btn-icon" style="color: #10b981;">
-            <svg aria-hidden="true" height="16" viewBox="0 0 16 16" version="1.1" width="16" fill="currentColor">
-              <path
-                d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8Zm8-6.5a6.5 6.5 0 1 0 0 13 6.5 6.5 0 0 0 0-13ZM6.92 6.085h.001a.749.749 0 1 1-1.342-.67c.169-.339.436-.701.849-.977C6.845 4.16 7.369 4 8 4a2.756 2.756 0 0 1 1.637.525c.503.377.863.965.863 1.725 0 .448-.115.83-.329 1.15-.205.307-.47.513-.692.662-.22.149-.41.242-.522.3a.727.727 0 0 0-.076.039l-.002.001h-.001a.75.75 0 0 1-.592-1.378c.074-.029.18-.07.281-.119.099-.048.177-.094.232-.143.059-.051.088-.09.106-.113.024-.029.057-.09.057-.188 0-.24-.086-.49-.287-.64C8.471 5.67 8.256 5.5 8 5.5c-.369 0-.597.09-.74.187a1.028 1.028 0 0 0-.34.398ZM8 11a1 1 0 1 1 0-2 1 1 0 0 1 0 2Z">
-              </path>
-            </svg>
-          </div>
-          Create a profile README
+        <button class="cmd-btn">
+          <atk-icon name="default" color="#10b981" [size]="16" />
+          <span class="cmd-btn-text">button 1</span>
         </button>
 
-        <button class="cmd-btn" (click)="handleSuggestion('explain')">
-          <div class="cmd-btn-icon" style="color: #8b5cf6;">
-            <svg aria-hidden="true" height="16" viewBox="0 0 16 16" version="1.1" width="16" fill="currentColor">
-              <path
-                d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8Zm8-6.5a6.5 6.5 0 1 0 0 13 6.5 6.5 0 0 0 0-13ZM6.92 6.085h.001a.749.749 0 1 1-1.342-.67c.169-.339.436-.701.849-.977C6.845 4.16 7.369 4 8 4a2.756 2.756 0 0 1 1.637.525c.503.377.863.965.863 1.725 0 .448-.115.83-.329 1.15-.205.307-.47.513-.692.662-.22.149-.41.242-.522.3a.727.727 0 0 0-.076.039l-.002.001h-.001a.75.75 0 0 1-.592-1.378c.074-.029.18-.07.281-.119.099-.048.177-.094.232-.143.059-.051.088-.09.106-.113.024-.029.057-.09.057-.188 0-.24-.086-.49-.287-.64C8.471 5.67 8.256 5.5 8 5.5c-.369 0-.597.09-.74.187a1.028 1.028 0 0 0-.34.398ZM8 11a1 1 0 1 1 0-2 1 1 0 0 1 0 2Z">
-              </path>
-            </svg>
-          </div>
-          Explain a repository
+        <button class="cmd-btn">
+          <atk-icon name="default" color="#00BFFF" [size]="16" />
+          <span class="cmd-btn-text">button 2</span>
         </button>
 
-        <button class="cmd-btn" (click)="handleSuggestion('code')">
+        <button class="cmd-btn">
           <div class="cmd-btn-icon" style="color: #10b981;">
             <svg aria-hidden="true" height="16" viewBox="0 0 16 16" version="1.1" width="16" fill="currentColor">
               <path
@@ -50,75 +48,7 @@
           Write code
         </button>
       </div>
+
     </div>
-  </div>
-
-  <!-- Feeds Section -->
-  @if (feeds && feeds.length > 0) {
-  <main class="feed-section">
-    @for (feed of feeds; track feed.id) {
-    <div class="feed-wrapper">
-      <header class="feed-header">
-        <h2>{{feed.title}}</h2>
-        <button class="filter-btn" (click)="handleFilter(feed.id)">
-          <svg aria-hidden="true" height="16" viewBox="0 0 16 16" version="1.1" width="16" fill="currentColor">
-            <path
-              d="M.75 3h14.5a.75.75 0 0 1 0 1.5H.75a.75.75 0 0 1 0-1.5ZM3 7.75A.75.75 0 0 1 3.75 7h8.5a.75.75 0 0 1 0 1.5h-8.5A.75.75 0 0 1 3 7.75Zm3 4a.75.75 0 0 1 .75-.75h2.5a.75.75 0 0 1 0 1.5h-2.5a.75.75 0 0 1-.75-.75Z">
-            </path>
-          </svg>
-          Filter
-        </button>
-      </header>
-
-      <div class="feed-items">
-        @for (item of feed.items; track $index) {
-        <div class="feed-item">
-          <div class="feed-item-header">
-            <div class="feed-item-header-title">
-              <img [src]="item.avatar" alt="Avatar" class="avatar" width="16" height="16" />
-              <span [innerHTML]="item.action"></span>
-            </div>
-            <span class="feed-time">{{item.time}}</span>
-          </div>
-
-          <div class="feed-item-content">
-            <div class="feature-title">
-              <svg class="feature-icon" aria-hidden="true" height="16" viewBox="0 0 16 16" version="1.1" width="16"
-                fill="var(--color-fg-muted)">
-                <path
-                  d="M2 2.5A2.5 2.5 0 0 1 4.5 0h8.75a.75.75 0 0 1 .75.75v12.5a.75.75 0 0 1-.75.75h-2.5a.75.75 0 0 1 0-1.5h1.75v-2h-8a1 1 0 0 0-.714 1.7.75.75 0 1 1-1.072 1.05A2.495 2.495 0 0 1 2 11.5Zm10.5-1h-8a1 1 0 0 0-1 1v6.708A2.486 2.486 0 0 1 4.5 9h8Z">
-                </path>
-              </svg>
-              <a [href]="item.repo.link" class="feature-name">
-                {{item.repo.name}}
-              </a>
-            </div>
-            <p class="feature-description">{{item.repo.description}}</p>
-            <div class="feature-stats">
-              @if (item.stats.language) {
-              <span class="stat-item">
-                <span class="language-dot" [class]="item.stats.language.name.toLowerCase()"
-                  [style.background-color]="item.stats.language.color"></span>
-                {{item.stats.language.name}}
-              </span>
-              }
-              @if (item.stats.stars) {
-              <span class="stat-item">
-                <svg aria-hidden="true" height="16" viewBox="0 0 16 16" version="1.1" width="16" fill="currentColor">
-                  <path
-                    d="M8 .25a.75.75 0 0 1 .673.418l1.882 3.815 4.21.612a.75.75 0 0 1 .416 1.279l-3.046 2.97.719 4.192a.751.751 0 0 1-1.088.791L8 12.347l-3.766 1.98a.75.75 0 0 1-1.088-.79l.72-4.194L.818 6.374a.75.75 0 0 1 .416-1.28l4.21-.611L7.327.668A.75.75 0 0 1 8 .25Z">
-                  </path>
-                </svg>
-                {{item.stats.stars}}
-              </span>
-              }
-            </div>
-          </div>
-        </div>
-        }
-      </div>
-    </div>
-    }
   </main>
-  }
 </div>
