🟥 feature: atk-bash (2025.09.18.123251) ------------------------------------------------ refact atk-bash-template.component (mainly) refact binance-account-info.component refact binance-account-snap.component refact binance-market.component refact binance-transaction-history.component ------------------------------------------------

--- a/atkm/src/app/features/binance/components/account-info/binance-account-info.component.html
+++ b/atkm/src/app/features/binance/components/account-info/binance-account-info.component.html
@@ -31,7 +31,7 @@
     <div class="terminal-section">
       <div class="terminal-content">
         <atk-icon class="terminal-toggle" name="triangle-right" color="var(--color-btn-bg-default)" />
-        <textarea class="terminal-input" placeholder="Informations générales" rows="1"></textarea>
+        <textarea class="terminal-input" placeholder="" rows="1"></textarea>
         <div class="infos-title">
           <h2>Permissions</h2>
         </div>
