--- a/atkm/src/app/shared/components/navbar-main/navbar-main.component.html
+++ b/atkm/src/app/shared/components/navbar-main/navbar-main.component.html
@@ -8,7 +8,24 @@
         </path>
       </svg>
     </button>
-
+    <button class="user-btn">
+      <img src="https://avatars.githubusercontent.com/u/32144309?v=4" alt="@user" class="user-avatar" width="16"
+        height="16" />
+    </button>
+    <button class="action-btn">
+      <svg aria-hidden="true" height="16" viewBox="0 0 16 16" version="1.1" width="16" fill="currentColor">
+        <path
+          d="M7.75 2a.75.75 0 0 1 .75.75V7h4.25a.75.75 0 0 1 0 1.5H8.5v4.25a.75.75 0 0 1-1.5 0V8.5H2.75a.75.75 0 0 1 0-1.5H7V2.75A.75.75 0 0 1 7.75 2Z">
+        </path>
+      </svg>
+    </button>
+    <button class="action-btn" aria-label="Créer quelque chose de nouveau">
+      <svg aria-hidden="true" height="16" viewBox="0 0 16 16" version="1.1" width="16" fill="currentColor">
+        <path
+          d="M7.75 2a.75.75 0 0 1 .75.75V7h4.25a.75.75 0 0 1 0 1.5H8.5v4.25a.75.75 0 0 1-1.5 0V8.5H2.75a.75.75 0 0 1 0-1.5H7V2.75A.75.75 0 0 1 7.75 2Z">
+        </path>
+      </svg>
+    </button>
     <a class="logo" [href]="config?.navbar?.logo?.link || '#'" aria-label="Homepage">
       <svg aria-hidden="true" height="40" viewBox="0 0 32 32" version="1.1" width="40">
         <defs>
